 -- Add new shard plugin for sharing gpus but not with mps.
 -- Add support for Lenovo SD650 V2 in acct_gather_energy/xcc plugin.
 -- Remove cgroup_allowed_devices_file.conf, since the default policy in modern
    kernels is to whitelist by default. Denying specific devices must be done
    through gres.conf.
 -- Node state flags (DRAIN, FAILED, POWERING UP, etc.) will be cleared now if
    node state is updated to FUTURE.
 -- srun will no longer read in SLURM_CPUS_PER_TASK. This means you will
    implicitly have to specify -c on your srun calls, or set the new
    SRUN_CPUS_PER_TASK env var to accomplish the same thing.
 -- Remove connect_timeout and timeout options from JobCompParams as there's no
    longer a connectivity check happening in the jobcomp/elasticsearch plugin
    when setting the location off of JobCompLoc.

CONFIGURATION FILE CHANGES (see man appropriate man page for details)
=====================================================================
 -- AcctGatherEnergyType 'rsmi' is now 'gpu'.
 -- TaskAffinity parameter was removed from cgroup.conf.
 -- Fatal if the mutually-exclusive JobAcctGatherParams options of UsePss and
    NoShared are both defined.
 -- KeepAliveTime has been moved into CommunicationParameters. The standalone
    option will be removed in a future version.

COMMAND CHANGES (see man pages for details)
===========================================
 -- Remove support for (non-functional) --cpu-bind=boards.
 -- Added --prefer option at job submission to allow for 'soft' constraints.
 -- Add "condflags=open" to sacctmgr show events to return open/currently down
    events.
 -- sacct -f flag implies -c flag.

API CHANGES
===========
 -- openapi/v0.0.35 - Plugin has been removed.
 -- burst_buffer plugins - err_msg added to bb_p_job_validate().
 -- openapi - added flags to slurm_openapi_p_get_specification(). Existing
    plugins only need to update their prototype for the function as
    manipulating the flags pointer is optional.